--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@vue/apollo-composable": "^4.2.2",
     "graphql": "^16.11.0",
     "graphql-tag": "^2.12.6",
+    "pivotui": "^0.1.5",
     "vue": "^3.5.17"
   },
   "devDependencies": {
