--- a/package.json
+++ b/package.json
@@ -15,11 +15,13 @@
   },
   "dependencies": {
     "@apollo/client": "^3.13.8",
+    "@tailwindcss/vite": "^4.1.11",
     "@vue/apollo-composable": "^4.2.2",
     "graphql": "^16.11.0",
     "graphql-tag": "^2.12.6",
-    "pivotui": "^0.1.5",
-    "vue": "^3.5.17"
+    "tailwindcss": "^4.1.11",
+    "vue": "^3.5.17",
+    "vue-router": "4"
   },
   "devDependencies": {
     "@graphql-codegen/cli": "^5.0.7",
@@ -32,6 +34,7 @@
     "@vitejs/plugin-vue": "^6.0.0",
     "@vue/compiler-sfc": "^3.5.18",
     "@vue/tsconfig": "^0.7.0",
+    "daisyui": "^5.0.49",
     "dotenv": "^17.2.1",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
