--- a/package.json
+++ b/package.json
@@ -7,6 +7,8 @@
     "dev": "vite",
     "build": "vue-tsc -b && vite build",
     "preview": "vite preview",
+    "start": "vite preview --host 0.0.0.0 --port ${PORT:-4173}",
+    "start:serve": "serve dist -s -l ${PORT:-3000}",
     "codegen": "graphql-codegen --config codegen.ts",
     "codegen:watch": "graphql-codegen --config codegen.ts --watch",
     "generate-types": "yarn codegen",
@@ -19,6 +21,7 @@
     "@vue/apollo-composable": "^4.2.2",
     "graphql": "^16.11.0",
     "graphql-tag": "^2.12.6",
+    "serve": "^14.2.4",
     "tailwindcss": "^4.1.11",
     "vue": "^3.5.17",
     "vue-router": "4"
