--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "engines": {
     "node": "22.12.0"
   },
+  "packageManager": "yarn@4.0.0",
   "scripts": {
     "dev": "vite",
     "build": "vue-tsc -b && vite build",
