feat: Implement Email Ingestion Modal with file upload and processing options

--- a/.env.example
+++ b/.env.example
@@ -11,6 +11,13 @@ VITE_SCHEMA_SDL_ENDPOINT=/schema.graphql
 VITE_SCHEMA_JSON_ENDPOINT=/schema.json
 VITE_PLAYGROUND_ENDPOINT=/playground
 
+# n8n Integration
+VITE_N8N_EMAIL_WEBHOOK_URL=https://your-n8n-instance.com/webhook/email-processing
+
+# File Upload Configuration
+VITE_MAX_FILE_SIZE=10485760
+VITE_ALLOWED_IMAGE_TYPES=image/png,image/jpeg,image/jpg,image/webp
+
 # Optional: Environment identifier
 VITE_APP_ENV=development
 
